[package]
name = "number_place_wasm"
version = "0.1.0"
edition = "2021"
wasm-opt = false

[dependencies.number_place]
git = "https://github.com/gw31415/number_place"

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dependencies]
wasm-bindgen = "0.2.81"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
