[package]
name = "number_place_wasm"
version = "0.1.0"
edition = "2024"

[dependencies.number_place]
git = "https://github.com/gw31415/number_place"

[dependencies.wee_alloc]
version = "0.4"
optional = true

[dependencies]
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
tsify = "0.5.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
